Monolith Timeline: Fixed the visual bug where years would overlap into the neighboring year if there wasn't enough room.
git-svn-id: http://svn.habariproject.org/habari/trunk/htdocs/system@1968 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -285,6 +285,7 @@ body, textarea, #footer {
 #page .container.transparent {
 	background: transparent;
 	padding-top: 0;
+	padding-bottom: 0;
 	-webkit-box-shadow: none;
 	}
 
@@ -1113,6 +1114,10 @@ body.page-themes #page .dropbutton {
 
 /* MANAGE (ENTRIES/PAGES/COMMENTS/TAGS) */
 
+.container .item:hover {
+	background: #e9e9e9;
+	}
+
 .manage .item .head > span {
 	white-space: nowrap;
 	}
@@ -1256,6 +1261,7 @@ body.page-themes #page .dropbutton {
 	opacity: .2;
 	border-left: 1px solid #ccc;
 	color: white;
+	overflow: hidden;
 	}
 
 .timeline .years .months {
